# valman

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  log4rs.yml
.github/workflows/: build.yml
src/: backup.rs  config.rs  docker.rs  error.rs  handlers.rs  main.rs  valve.rs
templates/: main.html
