[package]
name = "valman"
version = "0.2.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = { version = "1.2", features = ["gzip"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.6", features = ["macros", "tokio"] }
include_dir = "0.7"
mime_guess = "2.0"
a2s = { version = "0.5", features = ["async"] }
docker-api = "0.12"
thiserror = "1.0"
chrono = "0.4"
humansize = "2"
http-auth-basic = "0.3"
flate2 = "1"
tar = "0.4"

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git"] }